// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateI18nCommand > generates all i18n files correctly based on a virtual file system as odyssey-react-mui package > generated odyssey-react-mui variant of i18n.resources.ts file 1`] = `
"/*!
 * Copyright (c) 2025-present, Okta, Inc. and/or its affiliates. All rights reserved.
 * The Okta software accompanied by this notice is provided pursuant to the Apache License, Version 2.0 (the "License.")
 *
 * You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0.
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *
 * See the License for the specific language governing permissions and limitations under the License.
 */

/*
 *************************************************************************
 *  NOTICE: THIS FILE WAS AUTO-GENERATED BY THE \`generate:i18n\` SCRIPT.  *
 *************************************************************************
 */

import { translation as fr } from "../properties/ts/odyssey-react-mui_fr.js";
import { translation as pt_BR } from "../properties/ts/odyssey-react-mui_pt_BR.js";
import { translation as en } from "../properties/ts/odyssey-react-mui.js";
import { ResourceRecord } from "./i18n.types.js";

export const resources = {
  en,
  fr,
  pt_BR,
} as const satisfies ResourceRecord;
"
`;

exports[`generateI18nCommand > generates all i18n files correctly based on a virtual file system as odyssey-react-mui package > generated odyssey-react-mui variant of i18n.ts file 1`] = `
"/*!
 * Copyright (c) 2025-present, Okta, Inc. and/or its affiliates. All rights reserved.
 * The Okta software accompanied by this notice is provided pursuant to the Apache License, Version 2.0 (the "License.")
 *
 * You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0.
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *
 * See the License for the specific language governing permissions and limitations under the License.
 */

/*
 *************************************************************************
 *  NOTICE: THIS FILE WAS AUTO-GENERATED BY THE \`generate:i18n\` SCRIPT.  *
 *************************************************************************
 */

import {
  getTranslationServices,
  TypedTFunction,
} from "@okta/odyssey-contribution-tooling";

import { resources } from "./i18n.resources.js";
import {
  defaultLanguageCode,
  i18nResourceType,
  namespace,
} from "./i18n.types.js";

export type * from "@okta/odyssey-contribution-tooling";

export const { i18n, Trans, TranslationProvider, useTranslation } =
  getTranslationServices({
    defaultLanguageCode,
    namespace,
    resources,
  });

export const translate = i18n.t.bind(
  i18n,
) as TypedTFunction<i18nResourceType>;
"
`;

exports[`generateI18nCommand > generates all i18n files correctly based on a virtual file system as odyssey-react-mui package > generated odyssey-react-mui variant of i18n.types.ts file 1`] = `
"/*!
 * Copyright (c) 2025-present, Okta, Inc. and/or its affiliates. All rights reserved.
 * The Okta software accompanied by this notice is provided pursuant to the Apache License, Version 2.0 (the "License.")
 *
 * You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0.
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *
 * See the License for the specific language governing permissions and limitations under the License.
 */

/*
 *************************************************************************
 *  NOTICE: THIS FILE WAS AUTO-GENERATED BY THE \`generate:i18n\` SCRIPT.  *
 *************************************************************************
 */

import { translation as defaultTranslation } from "../properties/ts/odyssey-react-mui.js";

export const defaultLanguageCode = "en" as const;

/**
 * The namespace for the odyssey-react-mui package.
 */
export const namespace = "odyssey-react-mui" as const;
export type i18nNamespace = typeof namespace;

/**
 * Defines the shape of all translation keys for the Odyssey namespace.
 * It's derived from the default (en) translation file,
 * which acts as the source of truth for all available keys.
 */
export type i18nResourceType = typeof defaultTranslation;

/**
 * Supported languages for translations for the odyssey-react-mui package.
 */
export type SupportedLanguages =
  | "en"
  | "fr"
  | "pt_BR";

export type ResourceRecord = Record<
  SupportedLanguages,
  Partial<Record<keyof i18nResourceType, string>>
>;
"
`;

exports[`generateI18nCommand > generates all i18n files correctly based on virtual file system as contribution package > generated contributions variant of i18n.resources.ts file 1`] = `
"/*
 *************************************************************************
 *  NOTICE: THIS FILE WAS AUTO-GENERATED BY THE \`generate:i18n\` SCRIPT.  *
 *************************************************************************
 */

import { translation as fr } from "../properties/ts/my-package_fr.js";
import { translation as pt_BR } from "../properties/ts/my-package_pt_BR.js";
import { translation as en } from "../properties/ts/my-package.js";
import { ResourceRecord } from "./i18n.types.js";

export const resources = {
  en,
  fr,
  pt_BR,
} as const satisfies ResourceRecord;
"
`;

exports[`generateI18nCommand > generates all i18n files correctly based on virtual file system as contribution package > generated contributions variant of i18n.ts file 1`] = `
"/*
 *************************************************************************
 *  NOTICE: THIS FILE WAS AUTO-GENERATED BY THE \`generate:i18n\` SCRIPT.  *
 *************************************************************************
 */

import {
  getTranslationServices,
  TypedTFunction,
} from "@okta/odyssey-contribution-tooling";

import { resources } from "./i18n.resources.js";
import {
  defaultLanguageCode,
  i18nResourceType,
  namespace,
} from "./i18n.types.js";

export type * from "@okta/odyssey-contribution-tooling";

export const { i18n, Trans, TranslationProvider, useTranslation } =
  getTranslationServices({
    defaultLanguageCode,
    namespace,
    resources,
  });

export const translate = i18n.t.bind(
  i18n,
) as TypedTFunction<i18nResourceType>;
"
`;

exports[`generateI18nCommand > generates all i18n files correctly based on virtual file system as contribution package > generated contributions variant of i18n.types.ts file 1`] = `
"/*
 *************************************************************************
 *  NOTICE: THIS FILE WAS AUTO-GENERATED BY THE \`generate:i18n\` SCRIPT.  *
 *************************************************************************
 */

import { translation as defaultTranslation } from "../properties/ts/my-package.js";

export const defaultLanguageCode = "en" as const;

/**
 * The namespace for the my-package package.
 */
export const namespace = "my-package" as const;
export type i18nNamespace = typeof namespace;

/**
 * Defines the shape of all translation keys for the Odyssey namespace.
 * It's derived from the default (en) translation file,
 * which acts as the source of truth for all available keys.
 */
export type i18nResourceType = typeof defaultTranslation;

/**
 * Supported languages for translations for the my-package package.
 */
export type SupportedLanguages =
  | "en"
  | "fr"
  | "pt_BR";

export type ResourceRecord = Record<
  SupportedLanguages,
  Partial<Record<keyof i18nResourceType, string>>
>;
"
`;
